# RDK_Robot

./: README.md  README_cn.md
src/arm_service/: CMakeLists.txt  package.xml
src/arm_service/scripts/: arm_server.py
src/arm_service/srv/: SetJoints.srv  SetPose.srv
src/detect/: README.md  package.xml  setup.py  test.sh
src/detect/detect/: BPU.py  YOLO11.py  callprocess.py  detect.py
src/dlib_face_detection/: package.xml  setup.cfg  setup.py
src/dlib_face_detection/dlib_face_detection/: face_recognition.py  getFaceDB.py
src/dlib_face_detection/resource/featureDB/: Joey.csv  phoebe.csv  ross.csv
src/lidar_driver/src/lslidar_driver/params/lidar_uart_ros2/: lsn10.yaml
src/linear_actuator/: package.xml  setup.py
src/linear_actuator/linear_actuator/: linear_actuator.py
src/nouse/armmodel_moveit_config/config/: kinematics.yaml
src/nouse/driver/: package.xml  setup.py
src/nouse/driver/driver/: reset.py  robot_controller_gd.py  robot_controller_qrs.py  robot_sdk.py
src/nouse/ik_test/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/nouse/ik_test/ik_test/: ik_test.py
src/nouse/ik_test/srv/: SetPose.srv
src/nouse/image_websocket_publisher/: package.xml  setup.cfg  setup.py
src/nouse/image_websocket_publisher/image_websocket_publisher/: image_publisher.py
src/nouse/image_websocket_publisher/resource/: web.html
src/nouse/imu948_py/: package.xml  setup.cfg  setup.py
src/nouse/imu948_py/imu948_py/: imu948_pub.py  imu948_ttl.py
src/nouse/upixels_flow/: CMakeLists.txt  package.xml
src/nouse/upixels_flow/src/: LC-302-GS.cpp
src/qrs_competition/: CMakeLists.txt  README.md  package.xml
src/qrs_competition/launch/: bringup.launch.py
src/robot_driver/: CMakeLists.txt  README.md  package.xml
src/robot_driver/include/robot_driver/: armdriver.hpp  quaternion.hpp
src/robot_driver/launch/: robot_driver.launch.py  robot_noarm.launch.py
src/robot_driver/scripts/: arm_server.py  teleop.py
src/robot_driver/src/: armdriver.cpp  quaternion.cpp
src/start_detect/: README.md  setup.py
src/start_detect/launch/: start_detect.launch.py
src/start_detect/resource/featureDB/: chandler.csv  monica.csv  rachel.csv  thunder.csv
src/start_detect/resource/featureMean/: feature_all.csv
src/start_detect/start_detect/: getFaceDB.py  start_detect.py
src/startlocal/config/: local.lua  nav2.yaml
src/startlocal/launch/: cartolocal.launch.py  cartonav.launch.py
src/task_scheduler/: package.xml  setup.cfg  setup.py
src/task_scheduler/task_scheduler/: scheduler_node.py  task_manager.py
src/toolmsg/: CMakeLists.txt  package.xml
src/toolmsg/msg/: ToolPosition.msg  ToolPositionArray.msg
src/toolmsg/srv/: ToolDetection.srv
src/visual_robot/: CMakeLists.txt
src/visual_robot/launch/: visual_joint.launch.py  visual_robot.launch.py
src/visual_robot/urdf/: ahpu_robot.urdf
src/voice_task_manager/: package.xml  setup.cfg  setup.py
src/voice_task_manager/voice_task_manager/: voice_task_manager.py
src/web_service_pkg/: README.md  package.xml  setup.cfg  setup.py
src/web_service_pkg/launch/: start_web_service.launch.py
src/web_service_pkg/resource/video/: index.html
src/web_service_pkg/resource/video/css/: style.css
src/web_service_pkg/resource/video/js/: AttendanceSystem.js  MovementControl.js  RosConnection.js  client.js
src/web_service_pkg/web_service_pkg/: server.py
