<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dlib_face_detection</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for face detection and recognition using dlib.</description>

  <maintainer email="sunrise@todo.todo">sunrise</maintainer>
  <license>Apache License 2.0</license>

  <!-- 依赖项 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv4</depend>
  <depend>dlib</depend>
  <depend>numpy</depend>
  <depend>pandas</depend>
  <depend>scikit-image</depend>

  <!-- 测试依赖项 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>